--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -1,3 +1,3 @@
 if( INSTALL_LAYOUT STREQUAL Portable AND UNIX )
-  install( FILES server.sh.template DESTINATION "${DOC_INSTALL_DIR}" )
+  install( FILES server.sh.template DESTINATION "${CMAKE_INSTALL_PREFIX}" )
 endif( )
